# OpenCVProjects

./: .gitignore  00-build.sh  01-make.sh  CMakeLists.txt  README.md
01_OpencvCourse1/: CMakeLists.txt
01_OpencvCourse1/Week1-GettingStarted/: CMakeLists.txt  Week1-notes.txt
01_OpencvCourse1/Week1-GettingStarted/Application_Sunglasses_Filter/: Load_Images.cpp  Using_Arithmetic_Operations.cpp  Using_Naive_Replace.cpp
01_OpencvCourse1/Week1-GettingStarted/Assigment-QRcodeDetector/: submission.cpp
01_OpencvCourse1/Week1-GettingStarted/Assigment_QRcodeDetector/: CMakeLists.txt  QR-Code-Detector.ipynb  submission.cpp
01_OpencvCourse1/Week1-GettingStarted/Basic_Image_Operations/: Copying_a_region_to_another.cpp  Create_new_images.cpp  Creating_an_image_mask.cpp  Cropping_an_Image_Section.cpp  Resizing_an_image.cpp
01_OpencvCourse1/Week1-GettingStarted/Bitwise_Operations/: Example.cpp
01_OpencvCourse1/Week1-GettingStarted/Getting_started_with_images/: Color_Images.cpp  Image_as_a_matrix.cpp  Image_with_alpha_channel.cpp  Manipulating_Color_Pixels.cpp  Manipulating_Pixels.cpp  Manipulating_group_of_pixels.cpp  Notes.txt  Saving_an_image.cpp  Splitting_and_merging_channels.cpp  dataPath.hpp
01_OpencvCourse1/Week1-GettingStarted/Image_Annotation/: CMakeLists.txt  Drawing_Circles.cpp  Drawing_Ellipse.cpp  Drawing_Lines.cpp  Drawing_Rectangles.cpp  Drawing_Text.cpp
01_OpencvCourse1/Week1-GettingStarted/Mathematical_Operations_on_Images/: Brightness_Enhancement.cpp  Contrast_Enhancement.cpp
03_DeepLearning/: Assignment_Adam_Optimizer_Implementation.ipynb
03_DeepLearning/Quiz1/: Quiz1.ipynb
ObjectTracking/: ball_tracking.py  ball_tracking_with_direction.py  ball_tracking_with_direction_not_tested.cpp  color_detection.py  trials.py  video_record_from_camera_opencv_not_tested.cpp
OpencvCourse1/: CMakeLists.txt
SampleCode/: CMakeLists.txt
ThreeDReconstruction/: CMakeLists.txt
ThreeDReconstruction/src/: three_d_reconstruction.cpp
(+122 files in other folders)
