cmake_minimum_required(VERSION 2.8.12)

PROJECT(Course1)
SET(CMAKE_CXX_STANDARD 20)

# add_subdirectory(Getting_started_with_images)
# add_subdirectory(Bitwise_Operations)
# add_subdirectory(Image_Annotation)
# add_subdirectory(Mathematical_Operations_on_Images)
# add_subdirectory(Basic_Image_Operations)
# add_subdirectory(Application_Sunglasses_Filter)
add_subdirectory(Assigment-QRcodeDetector)